Bugfix: remove white gap at bottom of footer

--- a/public_website/static/css/style.css
+++ b/public_website/static/css/style.css
@@ -1925,7 +1925,7 @@ p.tab-section-status.pending {
 footer .footer-main {
     color: #ffffff;
     background-color: #414141;
-    padding: 4rem 0;
+    padding: 4rem 0 0 0;
 }
 
 @media (max-width: 576px) {
@@ -1935,6 +1935,10 @@ footer .footer-main {
 }
 
 /* ------ wavy footer ------ */
+
+footer.wavy-footer {
+    background-color: #414141;
+}
 
 footer.wavy-footer::before {
     display: block;
@@ -2067,6 +2071,8 @@ footer .footer-base {
     background-color: #000000;
     font-size: 0.8rem;
     text-align: center;
+    position: relative;
+    bottom: -1rem;
 }
 
 footer .footer-base p {
